  - Ensure that the after command runs even upon backup failure
  - Fix minor bugs regarding logging and reporting of backup progress when
    performing Direct Copy backups to a remote destination
  - Display tracebacks at log level ERROR instead of DEBUG when an error occurs
    during a backup or restore
  - Add a "[successful]" backup token
  
|| Version 1.43.3rc5 changes ||
  * Thu Jul 1 2010 Stewart Adam <s.adam at diffingo.com>
    - Happy Canada day!
    - Update documentation, start using Publican publishing tool
    - Display popups for some errors instead of showing a statusbar notification
    
  * Thu Jun 24 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a bug where no world read permissions on /etc/crontab would cause a 
      crash on startup
  
  * Tue Jun 22 2010 Stewart Adam <s.adam at diffingo.com>
    - Make the backup options tab much easier to use by reworking the engine
      selection
    - Run the "before command" prior to the preparation and cleanup steps (fixes
      RH #604682)
    - Make the port selection a spinbutton (forces numeric entry only)
    - Implement tokens (string replacements) for the user-specified before/after
      backup commands
    
  * Sat Apr 24 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a bug where the sensitivity of the incremental checkbutton was
      incorrectly set when configuring a new backup set
  
  * Thu Apr 22 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a regression where calling "fwbackups --help" resulted in a traceback
    - Change behaviour of "--verbosity" option, making it print log messages to
      the console. A second use of "--verbosity" will enable debug messages 
      (the previous behaviour of this option) as well as printing log messages
      to the console.
    
  * Wed Apr 21 2010 Stewart Adam <s.adam at diffingo.com>
    - HIG changes: Make all dialogs use application icon, better primary texts,
      make info/confirm/warning/error dialogs have no title
  